--- a/form_app/templates/index.html
+++ b/form_app/templates/index.html
@@ -62,6 +62,7 @@
                 {% endfor %}
             </div>
         </div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
